--- a/week3/index.html
+++ b/week3/index.html
@@ -7,8 +7,43 @@
 </head>
 
 <body>
-    <h1>The Roost Cafe</h1>
-    Welcome to our shop!
+    <!-- 
+    tagname + tab to complete the tag 
+    ctrl + arrow keys to skip through words/page
+    shift + arrow keys to select text
+    *look up how to skip entire lines*
+-->
+    <!-- Site header -->
+    <header>
+        <h1>The Roost Cafe</h1>
+    </header>
+    <!-- Main content of the page -->
+    <main>
+        <article>
+            <h2>Our Story</h2>
+            <p>
+                The Roost is a cafe that first appears in <em>Animal Crossing: Wild World.</em> Brewster, a pigeon, is the <abbr title="Chief Executive Officer">CEO</abbr> and head barista of the cafe. <em>Animal Crossing: New Horizons</em> is the 1<sup>st</sup> game since <em>Wild World</em> in which The Roost has not been added.
+            </p>
+            <blockquote>
+                Wait a second... The Roost doesn't exist in <em>New Horizons?!</em> <cite>- Mayor of Hiddenleaf</cite>
+            </blockquote>
+            <hr>
+            <section>
+                <h3>Hiddenleaf</h3>
+                <p>
+                    We are a local coffee shop based in Hiddenleaf. Our specialty is <b>organic fair-trade</b> coffee.
+                </p>
+            </section>
+        </article>
+        <aside>
+            <h3>Merchandise</h3>
+        </aside>
+
+    </main>
+    <!-- Site footer -->
+    <footer>
+        Copyright The Roost (Nintendo), 2021
+    </footer>
 </body>
 
 </html>
