Adds various lists

--- a/week3/index.html
+++ b/week3/index.html
@@ -37,8 +37,40 @@
         </article>
         <aside>
             <h3>Merchandise</h3>
+            <!-- Adding unordered list for merchandise -->
+            <ul>
+                <li>Normal Coffee Beans (500 Bells)</li>
+                <li>Good Coffee Beans (1000 Bells)</li>
+                <li>Superb Coffee Beans (2000 Bells)</li>
+            </ul>
         </aside>
-
+        <!-- Adding section for the ordered list. li*number adds several list lines-->
+        <section>
+            <h3>Events</h3>
+            <ol>
+                <li>June 23<sup>rd</sup> - Blathers' Museum Fundraiser</li>
+                <li>July 27<sup>th</sup> - Live Music by K.K. Slider</li>
+            </ol>
+        </section>
+        <!-- Adding section for the description list -->
+        <section>
+            <h3>Drink of the Week</h3>
+            <dl>
+                <dt>Hot Chocolate:</dt>
+                <dd>Cozy, chocolatey goodness with a dollop of homemade whipped cream.</dd>
+                <dt>Calories:</dt>
+                <dd>250</dd>
+                <dt>Ingredients:</dt>
+                <dd>
+                    <ul>
+                        <li>oat milk</li>
+                        <li>chocolate syrup</li>
+                        <li>cocoa powder</li>
+                        <li>whipped cream</li>
+                    </ul>
+                </dd>
+            </dl>
+        </section>
     </main>
     <!-- Site footer -->
     <footer>
