Adds html entities

--- a/week3/index.html
+++ b/week3/index.html
@@ -74,7 +74,7 @@
     </main>
     <!-- Site footer -->
     <footer>
-        Copyright The Roost (Nintendo), 2021
+        Copyright &copy; The Roost (Nintendo), 2021
     </footer>
 </body>
 
