--- a/week3/index.html
+++ b/week3/index.html
@@ -22,7 +22,10 @@
         <article>
             <h2>Our Story</h2>
             <p>
-                The Roost is a cafe that first appears in <em>Animal Crossing: Wild World.</em> Brewster, a pigeon, is the <abbr title="Chief Executive Officer">CEO</abbr> and head barista of the cafe. <em>Animal Crossing: New Horizons</em> is the 1<sup>st</sup> game since <em>Wild World</em> in which The Roost has not been added.
+                The Roost is a cafe that first appears in <em>Animal Crossing: Wild World.</em> Brewster, a pigeon, is
+                the <abbr title="Chief Executive Officer">CEO</abbr> and head barista of the cafe. <em>Animal Crossing:
+                    New Horizons</em> is the 1<sup>st</sup> game since <em>Wild World</em> in which The Roost has not
+                been added.
             </p>
             <blockquote>
                 Wait a second... The Roost doesn't exist in <em>New Horizons?!</em> <cite>- Mayor of Hiddenleaf</cite>
