--- a/html-assignment/index.html
+++ b/html-assignment/index.html
@@ -1,15 +1,52 @@
 <!DOCTYPE html>
-<!-- requirements:
-add site HEADER w ur name as the main HEADING of the site
-add a title. 'taylor park portfolio'
-add article tag with heading 'about me'
-write at least 2 paragraphs abt urself (min 50 words per para)
-add motivational quote that you like w proper citation. if its ur own words quote urself
-use the following tags where possible: sup, em, and abbreviation
-add a footer w the copyright info
-then stage, commit, pull, push to github and test.
-submit link as text submission
-due june 3rd before 8am (next thurs)
---> 
+<html lang="en">
+<!-- HTML semantics Assignment - Week 3
+-->
+
+<head>
+    <meta charset="UTF-8">
+    <title>Taylor Park</title>
+</head>
+
+<body>
+    <header>
+        <h1>Taylor Park</h1>
+    </header>
+    <main>
+        <article>
+            <h2>About Me</h2>
+            <p>
+                Hello! My name is Taylor Park. I'm mixed Korean-Canadian residing in and attending school in Canada.
+                Incidentally, my legal first name is Jaehee - which is Korean. Taylor is my middle name, which I've
+                unofficially adopted as my first/preferred name since 2<sup>nd</sup> grade. I love my first name, but at
+                this point everyone already knows me as Taylor. My mom and I moved to Ottawa in the early 2000s and I've
+                lived in and around the Ottawa area ever since.
+            </p>
+            <p>
+                My main interest in life has always been visual art. I love illustration and recently have become very
+                interested in storytelling through the means of webcomics. In the past two years I've taught myself how
+                to
+                use <abbr title="Clip Studio Paint">CSP</abbr> (a popular artist's program for iPad, PC, Mac, etc.) and
+                have
+                made a goal to eventually post my own webcomic online for others to see.
+            </p>
+            <p>
+                My favourite quote comes from the memoir, <em>Tuesdays with Morrie.</em> Even though this was one of
+                those
+                books we had to read in high school, it easily became one of my favourites. Morrie had many aphorisms
+                about
+                life that helped get me through a time when I was diagnosed with a chronic illness. Even after the
+                darkest
+                part of this ordeal, I appreciate and think about his aphorisms all the time.
+            </p>
+            <blockquote><em>“The truth is, once you learn how to die, you learn how to live.” - Morrie Shwartz, Tuesdays
+                    with Morrie</em></blockquote>
+        </article>
+        <hr>
+    </main>
+    <footer>
+        Copyright &copy; Taylor Park, IMD 2021
+    </footer>
+</body>
 
 </html>
