--- a/week4/index.html
+++ b/week4/index.html
@@ -21,6 +21,8 @@
     <main>
         <article>
             <h2>Our Story</h2>
+            <!-- Adding image -->
+            <img src="images/coffee-shop.jpg" alt="coffee cup on pile of coffee beans">
             <p>
                 The Roost is a cafe that first appears in <em>Animal Crossing: Wild World.</em> Brewster, a pigeon, is
                 the <abbr title="Chief Executive Officer">CEO</abbr> and head barista of the cafe. <em>Animal Crossing:
