--- a/week4/contact.html
+++ b/week4/contact.html
@@ -44,6 +44,52 @@
                 </tr>
             </tbody>
         </table>
+        <section>
+            <h3>We love to hear from you!</h3>
+            <!-- Adding a form -->
+            <form action="thanks.html" method="get">
+                <div> 
+
+                    <label for="fullname">Your Name</label>
+                    <input type="text" name="fullname" placeholder="John Doe" value="Mr." id="fullname">
+                </div>
+                <div>
+
+                    <label for="youremail">Email</label>
+                    <input type="email" name="youremail" required id="youremail">
+                </div>
+                <div>
+                    <label for="message">Message</label>
+                    <textarea name="message" id="message"></textarea>
+                </div>
+                <div>
+                    <label for="Tickets">How many tickets? (sold in pairs)</label>
+                    <input type="number" name="tickets" id="tickets" min="2" max="10" step="2">
+                </div>
+                <div>
+                    <label for="row">Select Row</label>
+                    <select name="row" id="row">
+                        <option value="" selected >Select One</option>
+                        <option value="front">Front Row</option>
+                        <option value="center">Center Row</option>
+                        <option value="back">Back Row</option>
+                    </select>
+                </div>
+                <div>
+                    <h3>Have you been here before?</h3>
+                    <label for="yes">Yes</label>
+                    <input type="radio" name="past" id="yes" value="yes" checked>
+                    <label for="no">No</label>
+                    <input type="radio" name="past" id="no" value="no">
+                </div>
+                <div>
+                    <h3>Policies</h3>
+                    <input type="checkbox" name="policies" id="policies">
+                    <label for="policies">I agree with the Terms &amp; Policies.</label>
+                </div>
+                <button type="submit">Submit</button>
+            </form>
+        </section>
     </main>
     <!-- Site footer -->
     <footer>
