adds orange link tag

--- a/week5/index.html
+++ b/week5/index.html
@@ -4,6 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <title>The Roost Cafe - Home</title>
+    <link rel="stylesheet" href="css/main.css">
 </head>
 
 <body>
@@ -27,7 +28,7 @@
     <!-- Main content of the page -->
     <main>
         <!-- Adding on-page link -->
-        <a href="#treatofweek">Treat of the Week</a>
+        <a href="#treatofweek" class="orange-link">Treat of the Week</a>
         <article>
             <h2>Our Story</h2>
             <!-- Adding image -->
@@ -38,7 +39,7 @@
                     New Horizons</em> is the 1<sup>st</sup> game since <em>Wild World</em> in which The Roost has not
                 been added.
             </p>
-            <blockquote>
+            <blockquote class="large-text">
                 Wait a second... The Roost doesn't exist in <em>New Horizons?!</em> <cite>- Mayor of Hiddenleaf</cite>
             </blockquote>
             <hr>
@@ -85,12 +86,12 @@
                 </dd>
             </dl>
             <!-- Adding an external link -->
-            <a href="https://www.bonappetit.com/recipe/bas-best-hot-chocolate" target="_blank">Get the Recipe</a>
+            <a href="https://www.bonappetit.com/recipe/bas-best-hot-chocolate" target="_blank" class="orange-link large-text">Get the Recipe</a>
         </section>
         <!-- Adding section for menu -->
         <section>
             <h3>Menu Specials</h3>
-            <table border> 
+            <table> 
                 <thead>
                     <tr>
                         <th colspan="2">Items</th>
@@ -117,7 +118,7 @@
         </section>
     </main>
     <!-- Site footer -->
-    <footer>
+    <footer class="site-footer">
         Copyright &copy; The Roost (Nintendo), 2021
     </footer>
 </body>
