fixes image file name

--- a/html-assignment/index.html
+++ b/html-assignment/index.html
@@ -53,7 +53,7 @@
                     <p>
                         Here is a picture of my cat Dango.
                     </p>
-                    <img src="images/IMG_0110.JPG" alt="image of a tuxedo cat named Dango" title="Image of my cat Dango">
+                    <img src="images/img_0110.jpg" alt="image of a tuxedo cat named Dango" title="Image of my cat Dango">
                     <p>
                         My hobbies include, but are not limited to:
                         <ul>
