adds css folder and file

--- a/html-assignment/index.html
+++ b/html-assignment/index.html
@@ -6,6 +6,7 @@
 <head>
     <meta charset="UTF-8">
     <title>Taylor Park</title>
+    <link href="css/main.css" rel="stylesheet">
 </head>
 
 <body>
