adds css link to notes page

--- a/html-assignment/notes.html
+++ b/html-assignment/notes.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <title>Notes</title>
+    <link href="css/main.css" rel="stylesheet">
 </head>
 
 <body>
@@ -14,10 +15,11 @@
             </ul>
         </nav>
         <h1>Notes</h1>
-        <h3>HTML tags I've learned:</h3>
+
     </header>
     <main>
         <article>
+            <h3>HTML tags I've learned:</h3>
             <dl>
                 <dt>< blockquote ></dt>
                 <dd>Used to show a large, standalone quote.</dd>
