--- a/html-assignment/index.html
+++ b/html-assignment/index.html
@@ -11,7 +11,7 @@
 
 <body>
     <header>
-        <h1>Taylor Park</h1>
+        <h1 class="site-title"> Taylor Park</h1>
         <nav>
             <ul>
                 <li><a href="index.html">Home</a></li>
@@ -54,10 +54,10 @@
                     <p>
                         Here is a picture of my cat Dango.
                     </p>
-                    <img src="images/img_0110.jpg" alt="image of a tuxedo cat named Dango" title="Image of my cat Dango">
+                    <img src="images/img_0110.jpg" alt="image of a tuxedo cat named Dango" title="Image of my cat Dango" id="my-image">
                     <p>
                         My hobbies include, but are not limited to:
-                        <ul>
+                        <ul class="hobbies">
                             <li>art (mostly digital i.e. illustrations and webcomics)</li>
                             <li>video games</li>
                             <li>entertaining Dango</li>
