--- a/html-assignment/index.html
+++ b/html-assignment/index.html
@@ -26,47 +26,55 @@
                 <p>
                     Hello! My name is Taylor Park. I'm mixed Korean-Canadian residing in and attending school in Canada.
                     Incidentally, my legal first name is Jaehee - which is Korean. Taylor is my middle name, which I've
-                    unofficially adopted as my first/preferred name since 2<sup>nd</sup> grade. I love my first name, but at
-                    this point everyone already knows me as Taylor. My mom and I moved to Ottawa in the early 2000s and I've
+                    unofficially adopted as my first/preferred name since 2<sup>nd</sup> grade. I love my first name,
+                    but at
+                    this point everyone already knows me as Taylor. My mom and I moved to Ottawa in the early 2000s and
+                    I've
                     lived in and around the Ottawa area ever since.
                 </p>
                 <p>
-                    My main interest in life has always been visual art. I love illustration and recently have become very
-                    interested in storytelling through the means of webcomics. In the past two years I've taught myself how
+                    My main interest in life has always been visual art. I love illustration and recently have become
+                    very
+                    interested in storytelling through the means of webcomics. In the past two years I've taught myself
+                    how
                     to
-                    use <abbr title="Clip Studio Paint">CSP</abbr> (a popular artist program for iPad, PC, Mac, etc.) and
+                    use <abbr title="Clip Studio Paint">CSP</abbr> (a popular artist program for iPad, PC, Mac, etc.)
+                    and
                     have
                     made a goal to eventually post my own webcomic online for others to see.
                 </p>
                 <p>
                     My favourite quote comes from the memoir, <em>Tuesdays with Morrie.</em> Even though this was one of
                     those
-                    books we had to read in high school, it easily became one of my favourites. Morrie had many aphorisms
+                    books we had to read in high school, it easily became one of my favourites. Morrie had many
+                    aphorisms
                     about
                     life that helped get me through a time when I was diagnosed with a chronic illness. Even after the
                     darkest
                     part of this ordeal, I appreciate and think about his aphorisms all the time.
                 </p>
-                <blockquote><em>“The truth is, once you learn how to die, you learn how to live.” - Morrie Shwartz, Tuesdays
-                    with Morrie</em></blockquote>
-                </div>
-                <div>
-                    <p>
-                        Here is a picture of my cat Dango.
-                    </p>
-                    <img src="images/img_0110.jpg" alt="image of a tuxedo cat named Dango" title="Image of my cat Dango" id="my-image">
-                    <p>
-                        My hobbies include, but are not limited to:
-                        <ul class="hobbies">
-                            <li>art (mostly digital i.e. illustrations and webcomics)</li>
-                            <li>video games</li>
-                            <li>entertaining Dango</li>
-                            <li>watching cooking videos</li>
-                            <li>learning Korean</li>
-                            <li>dyeing my hair</li>
-                        </ul>
-                    </p>
-                </div>
+                <blockquote><em>“The truth is, once you learn how to die, you learn how to live.” - Morrie Shwartz,
+                        Tuesdays
+                        with Morrie</em></blockquote>
+            </div>
+            <div>
+                <p>
+                    Here is a picture of my cat Dango.
+                </p>
+                <img src="images/img_0110.jpg" alt="image of a tuxedo cat named Dango" title="Image of my cat Dango"
+                    id="my-image">
+                <p>
+                    My hobbies include, but are not limited to:
+                    <ul class="hobbies">
+                        <li>art (mostly digital i.e. illustrations and webcomics)</li>
+                        <li>video games</li>
+                        <li>entertaining Dango</li>
+                        <li>watching cooking videos</li>
+                        <li>learning Korean</li>
+                        <li>dyeing my hair</li>
+                    </ul>
+                </p>
+            </div>
         </article>
         <hr>
     </main>
