--- a/html-assignment/index.html
+++ b/html-assignment/index.html
@@ -63,9 +63,8 @@
                 </p>
                 <img src="images/img_0110.jpg" alt="image of a tuxedo cat named Dango" title="Image of my cat Dango"
                     id="my-image">
-
-                <p>
-                    My hobbies include, but are not limited to:
+                
+                    <p>My hobbies include, but are not limited to:
                     <ul class="hobbies">
                         <li>art (mostly digital i.e. illustrations and webcomics)</li>
                         <li>video games</li>
@@ -73,8 +72,7 @@
                         <li>watching cooking videos</li>
                         <li>learning Korean</li>
                         <li>dyeing my hair</li>
-                    </ul>
-                </p>
+                    </ul></p>
 
             </div>
         </article>
