fixes p tag error

--- a/html-assignment/index.html
+++ b/html-assignment/index.html
@@ -61,20 +61,24 @@
                 <p>
                     Here is a picture of my cat Dango.
                 </p>
-                <img src="images/img_0110.jpg" alt="image of a tuxedo cat named Dango" title="Image of my cat Dango"
-                    id="my-image">
+            </div>
 
-                    <p>
-                        My hobbies include, but are not limited to:
-                        <ul class="hobbies">
-                            <li>art (mostly digital i.e. illustrations and webcomics)</li>
-                            <li>video games</li>
-                            <li>entertaining Dango</li>
-                            <li>watching cooking videos</li>
-                            <li>learning Korean</li>
-                            <li>dyeing my hair</li>
-                        </ul>
-                    </p>
+            <img src="images/img_0110.jpg" alt="image of a tuxedo cat named Dango" title="Image of my cat Dango"
+                id="my-image">
+
+
+            <div>
+                My hobbies include, but are not limited to:
+
+                <ul class="hobbies">
+                    <li>art (mostly digital i.e. illustrations and webcomics)</li>
+                    <li>video games</li>
+                    <li>entertaining Dango</li>
+                    <li>watching cooking videos</li>
+                    <li>learning Korean</li>
+                    <li>dyeing my hair</li>
+                </ul>
+            </div>
             </div>
         </article>
         <hr>
