--- a/week7/index.html
+++ b/week7/index.html
@@ -15,6 +15,7 @@
     *look up how to skip entire lines*
     alt + arrow key to move line of code around
 -->
+    <div class="container">
     <!-- Site header -->
     <header>
         <h1>The Roost Cafe</h1>
@@ -121,6 +122,7 @@
     <footer class="site-footer">
         Copyright &copy; The Roost (Nintendo), 2021
     </footer>
+</div><!-- closing container-->
 </body>
 
 </html>
