adds map and icon fonts

--- a/week12/index.html
+++ b/week12/index.html
@@ -17,5 +17,8 @@
 <body>
     <h1>Welcome to Week 12<i class="im im-pizza"></i></h1>
     <p>Demo for Google fonts, icon fonts and embedding in HTML.</p>
+
+    <h2>Location</h2>
+    <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d1400.460251033333!2d-75.6937799023851!3d45.41094264979275!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x4cce05b1b68a55c7%3A0xc89cc79491f1ed61!2sMoo%20Shu%20Ice%20Cream%20%26%20Kitchen!5e0!3m2!1sen!2sca!4v1627567907970!5m2!1sen!2sca" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy"></iframe>
 </body>
 </html>
