styles main content except contact box and footer

--- a/final-project/index.html
+++ b/final-project/index.html
@@ -33,13 +33,12 @@
 
         <div class="banner">
             <!-- remove the image and add it as a background on the .banner** -->
-            <img src="./images/main-banner.jpg" alt="image of modern office space">
             <div class="banner-content">
                 <h1>Welcome to Three Star Media</h1>
                 <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Officiis cupiditate modi harum temporibus
                     aperiam recusandae illo provident vitae amet ad ratione quaerat quas dolore esse magnam, debitis nam
                     animi molestiae.</p>
-                <a href="#" target="_blank" class="btn">Connect with us<i class="im im-care-right"></i></a>
+                <a href="#" target="_blank" class="connect-btn">Connect with us<i class="im im-care-right"></i></a>
             </div>
         </div>
     </header>
@@ -117,15 +116,10 @@
 
         <!-- Section for Vision -->
         <section class="vision">
-            <!-- remove the image and add it as a background on the .vision** -->
-            <div class="visionbanner">
-                <img src="./images/vision.jpg" alt="image of origami boats on dark purple table">
-            </div>
             <div class="ourvision">
                 <h3>Our Vision</h3>
                 <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Illum amet obcaecati deserunt aut
-                    recusandae, ducimus beatae dolorem nemo enim dolor. Architecto repellendus, eligendi voluptatem
-                    delectus labore non dignissimos nesciunt reiciendis!</p>
+                    recusandae, ducimus beatae dolorem nemo enim dolor.</p>
                 <a href="#" class="btn">Learn More<i class="im im-care-right"></i></a>
             </div>
         </section>
@@ -135,7 +129,7 @@
             <div class="ourteam">
                 <h2>Our Team</h2>
                 <img src="./images/john.jpg" alt="image of john doe">
-                <div class="info">
+                <div class="team-info">
                     <h3>John Doe</h3>
                     <h4>CEO and Co-owner</h4>
                     <!-- border-bottom here -->
@@ -144,7 +138,7 @@
                         repellat nam, maxime fugit quos eum illum.</p>
                 </div>
                 <img src="./images/bob.jpg" alt="image of bob rite">
-                <div class="info">
+                <div class="team-info">
                     <h3>Bob Rite</h3>
                     <h4>CFO and Co-owner</h4>
                     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. At possimus cum tempora voluptatum
@@ -168,7 +162,7 @@
 
                     <div>
                         <label for="email">Email</label>
-                        <input type="email" name="email" required id="email" class="email">
+                        <input type="email" name="email" id="email" class="email">
                     </div>
 
                     <div>
