--- a/final-project/index.html
+++ b/final-project/index.html
@@ -13,14 +13,14 @@
     <!-- google fonts links -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@400;700;800&display=swap" rel="stylesheet"> 
+    <link href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@400;700;800&display=swap" rel="stylesheet">
 </head>
 
 <body>
     <div class="container">
         <header>
             <nav class="nav">
-                <ul>
+                <ul class="nav-list">
                     <!-- add anchor tag -->
                     <li><a><img src="./images/logo.png" alt="three star media logo"></a></li>
                     <li><a href="#">Home</a></li>
@@ -158,7 +158,7 @@
                             pariatur nostrum dicta sint exercitationem itaque dignissimos animi consequuntur, porro a
                             repellat nam, maxime fugit quos eum illum.</p>
                     </div>
-                    <img src="./images/bob.jpg" alt="image of bob rite">
+                    <img src="./images/bob.jpg" alt="image of bob rite" class="bob">
                     <div class="team-info">
                         <h3>Bob Rite</h3>
                         <h4>CFO and Co-owner</h4>
@@ -172,8 +172,8 @@
 
             <!-- Section for Contact Us -->
             <section class="contact">
+                <h2>Contact Us</h2>
                 <div class="contactbox">
-                    <h2>Contact Us</h2>
                     <h3>Send us a message</h3>
                     <form action="thanks.html" method="get" class="contact-box">
 
@@ -193,35 +193,35 @@
                         </div>
                         <button type="submit">Send</button>
                     </form>
-                    <!-- table for hours -->
-                    <table>
-                        <caption>Hours of Operation</caption>
-                        <thead>
-                            <tr>
-                                <th>Days</th>
-                                <th>Hours</th>
-                            </tr>
-                        </thead>
-                        <tbody>
-                            <tr>
-                                <td>Monday - Friday</td>
-                                <td>9 AM - 6 PM</td>
-                            </tr>
-                            <tr>
-                                <td>Saturday - Sunday</td>
-                                <td>Closed</td>
-                            </tr>
-                        </tbody>
-                    </table>
+                </div>
+                <!-- table for hours -->
+                <table>
+                    <caption>Hours of Operation</caption>
+                    <thead>
+                        <tr>
+                            <th>Days</th>
+                            <th>Hours</th>
+                        </tr>
+                    </thead>
+                    <tbody>
+                        <tr>
+                            <td>Monday - Friday</td>
+                            <td>9 AM - 6 PM</td>
+                        </tr>
+                        <tr>
+                            <td>Saturday - Sunday</td>
+                            <td>Closed</td>
+                        </tr>
+                    </tbody>
+                </table>
 
-                    <!-- location div -->
-                    <div class="location">
-                        <h3>Location</h3>
-                        <iframe
-                            src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3965.3381690784063!2d-75.75313077924493!3d45.350477428901954!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x0%3A0xf18b6b1cdfd0549d!2sAlgonquin%20College%20-%20Building%20V%20-%20Animal%20Health%20Care%20Facility!5e0!3m2!1sen!2sca!4v1627579203751!5m2!1sen!2sca"
-                            width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy"></iframe>
-                    </div>
-                </div> <!-- Closing contactbox Div -->
+                <!-- location div -->
+                <div class="location">
+                    <h3>Location</h3>
+                    <iframe
+                        src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3965.3381690784063!2d-75.75313077924493!3d45.350477428901954!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x0%3A0xf18b6b1cdfd0549d!2sAlgonquin%20College%20-%20Building%20V%20-%20Animal%20Health%20Care%20Facility!5e0!3m2!1sen!2sca!4v1627579203751!5m2!1sen!2sca"
+                        width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy"></iframe>
+                </div>
             </section> <!-- Closing Entire Contact Us Section -->
         </main>
         <footer>
